--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,21 +1,14 @@
-
-.div-container{
-   display: flex;
-   flex-wrap: wrap;
-    flex-direction: row;
-    width: 110vh;
-    height: 100vh;
-    
-    justify-content: center;
+body{
+    background-color: black;
 }
 
-.grid-items{
-    color: aqua;
-    background-color: rgb(11, 231, 22);
-    border: 1px solid blue;
-   width: calc(100% / 16);
-   height: calc(100% / 16) ;
-   box-sizing: border-box;
-   text-align: center  ;
-   
+#sketchArea {
+    margin: 50px auto;
+    width: 600px;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgb(63, 175, 175);
+    justify-content: space-between;
+
 }
